--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#projects">PROJECTS</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
 
@@ -106,7 +109,7 @@
     </nav>
 
     <!-- Top Section -->
-    <section class="top-section" style="background-image: url('static/assets/img/background.jpeg');">
+    <section class="top-section" style="background-image: url('static/assets/img/bg-sjtu.png');">
         <div class="top-section-content">
             <div class="container px-5">
                 <h2 id="top-section-bg-text" class="text-white display-3 lh-1 font-alt"></h2>
@@ -118,7 +121,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/photo.png">
+            <img class="shadow" src="static/assets/img/portrait.jpg">
         </div>
     </div>
     <!-- Photo -->
@@ -146,6 +149,17 @@
         </div>
     </section>
     <!-- Publications  -->
+
+    <!-- Projects -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="projects">
+        <div class="container px-5">
+            <header>
+                <h2 id="projects-subtitle"><i class="bi bi-gear-fill"></i>&nbsp;PROJECTS</h2>
+            </header>
+            <div class="main-body" id="projects-md"></div>
+        </div>
+    </section>
+    <!-- Projects -->
 
     <!-- Awards -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
